--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -9,8 +9,8 @@
   weight = 10
 
 [[main]]
-  name = "Projects"
-  url = "#projects"
+  name = "Research"
+  url = "#research"
   weight = 20
 
 [[main]]
